--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ sudo: requried
 services:
   - docker
 before_install:
-  - docker build -t athreya619/weatherapp -f Dockerfile
+  - docker build -t athreya619/weatherapp -f Dockerfile .
